Modified for our Shreveport's .NET Group website
Edited _config.yml. Deleted most of the posts. Added some images and
added one post.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,6 +55,12 @@
             <p class="copy-text">
                 Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <i class="icon-heart"></i> <a href="http://alum.mit.edu/www/hmfaysal/">HMFAYSAL OMEGA</a> theme.
             </p>
+			<p class="copy-text">
+				Image courtesy of maen_cg / <a href="FreeDigitalPhotos.net.">http://FreeDigitalPhotos.net</a>
+			</p>
+			<p class="copy-text">
+				Contact: steven.danna AT gmail NOSPAM DOT COM
+			</p>
             <ul class="menu-items">
             {% for link in site.links %}
             <li>
